--- a/styling/Header.module.css
+++ b/styling/Header.module.css
@@ -4,14 +4,22 @@
     opacity: 0;
 }
 .menuButton {
-    position: absolute;
-    top: 5px;
-    right: 15px;
-    width: 24px;
+    flex: 50%;
     height: 20px;
     cursor: pointer;
 }
-
+.loginMessage {
+    margin-top: 10px;
+    margin-right: 20px;
+    white-space: nowrap;
+}
+.rightHeaderContainer {
+    display: flex;
+    position: absolute;
+    top: 5px;
+    right: 15px;
+    height: 50px;
+}
 .navMenu {
     background-color: #bdc3c7;
     position: absolute;
