--- a/styling/Room.module.css
+++ b/styling/Room.module.css
@@ -30,5 +30,9 @@
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    background-color: green;
+}
+.playersContainer {
+    margin-bottom: 10px;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
 }
