--- a/styling/Swing.module.css
+++ b/styling/Swing.module.css
@@ -1,70 +1,33 @@
-.roomIdContainer {
-    position: absolute;
-    border: 5px solid black;
-    width: fit-content;
-    min-width: 175px;
-    padding: 10px;
-    background-color: orange;
-    color: red;
-    text-align: center;
-
-    margin-top: 80px;
-    margin-left: 70px;
-    left: 0;
-    top: 0;
+button,
+input,
+code {
+    display: inline-block;
+    outline: none;
+    font: inherit;
+    border: none;
+    background: #fde991;
+    padding: 0;
 }
 
-.roomId {
-    font-size: 200%;
-}
-.shareID {
-    font-size: 75%;
+button {
+    color: #c7433e;
+    cursor: pointer;
 }
 
-.mainContainer {
-    width: 60%;
-    min-width: 350px;
-    max-width: 600px;
-    /* margin: 0 auto; */
-    margin-top: 25vh;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-}
-.selectedRestaurants {
-    border-top: 1px solid black;
-    padding-top: 10px;
-}
-.playersContainer {
-    display: grid;
-    margin-bottom: 10px;
-    border-bottom: 1px solid black;
-    grid-template-columns: auto auto;
-    justify-content: space-between;
-    padding: 10px;
-}
-.gridItem {
-    text-align: center;
-}
-.addButton {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.addIcon {
-    width: 20px;
+input {
+    width: 50px;
 }
 
-.viewport {
+#viewport {
     width: 500px;
     height: 500px;
     background: #c7433e;
     border: 10px solid #ed5d52;
-    margin: 120px auto 0;
+    margin: 100px auto 0;
     position: relative;
 }
 
-.viewport .stack {
+#viewport .stack {
     width: 200px;
     height: 300px;
     background: #ed5d52;
@@ -75,7 +38,7 @@
     border-radius: 10px;
 }
 
-.viewport li {
+#viewport li {
     width: 200px;
     height: 300px;
     list-style: none;
@@ -85,23 +48,35 @@
     top: 0;
     left: 0;
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.2), 1px 1px 1px rgba(0, 0, 0, 0.2);
+    line-height: 300px;
     text-align: center;
+    font-size: 100px;
     border: 10px solid #ececec;
     box-sizing: border-box;
     cursor: default;
 }
 
-.viewport li.in-deck:nth-child(3) {
+#viewport li.clubs,
+#viewport li.spades {
+    color: #373737;
+}
+
+#viewport li.diamonds,
+#viewport li.hearts {
+    color: #ed5d52;
+}
+
+#viewport li.in-deck:nth-child(3) {
     top: 2px;
     transform: translate(2px, 2px) rotate(0.4deg);
 }
 
-.viewport li.in-deck:nth-child(2) {
+#viewport li.in-deck:nth-child(2) {
     top: 4px;
     transform: translate(-4px, -2px) rotate(-1deg);
 }
 
-.control {
+#control {
     position: absolute;
     bottom: 30px;
     left: 0;
@@ -110,7 +85,7 @@
     font-size: 0;
 }
 
-.control button {
+#control button {
     background: #ffffff;
     color: #373737;
     font-weight: bold;
@@ -124,9 +99,18 @@
     outline: none;
     position: relative;
 }
-.control button:active {
+#control button:active {
     background: #63211f;
     color: #ffffff;
     bottom: -2px;
     box-shadow: none;
+}
+
+#source {
+    width: 500px;
+    margin: 20px auto;
+}
+
+#source a {
+    color: #c7433e;
 }
